# remoteProgram

./: CMakeLists.txt  README.md  package.xml
include/: robot.h  ros_launch_manager.hpp
launch/: program.launch
src/: main.cpp
